# c-webserver

./: CMakeLists.txt  README.md  build.bat
headers/: cache.h  file.h  hashtable.h  linkedlist.h  mime.h  net.h
serverfiles/: 404.html
src/: cache.c  file.c  hashtable.c  linkedlist.c  mime.c  net.c  server.c
